fixed horizontal scroll

--- a/PortfolioIndex.css
+++ b/PortfolioIndex.css
@@ -1,3 +1,7 @@
+html{
+  overflow-x: hidden;
+}
+
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
